--- a/SearchAndSort/App.xaml
+++ b/SearchAndSort/App.xaml
@@ -4,10 +4,9 @@
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <Style TargetType="Button">
-
             <Setter Property="Margin" Value="5 3" />
         </Style>
-        <Style x:Key="Heading" TargetType="Label">
+        <Style x:Key="Heading" TargetType="Control">
             <Setter Property="FontWeight" Value="Bold" />
         </Style>
         <Style x:Key="Info" TargetType="Label">
