--- a/SearchAndSort/App.xaml
+++ b/SearchAndSort/App.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <Style TargetType="CheckBox">
+            <Setter Property="Margin" Value="5 3" />
+        </Style>
         <Style TargetType="Button">
             <Setter Property="Margin" Value="5 3" />
         </Style>
