Implemented merge sort method along with associated unit tests, WPF controls and event handlers; implemented commonly used Swap helper method in Sort class for swapping values within an array

--- a/SearchAndSort/MainWindow.xaml
+++ b/SearchAndSort/MainWindow.xaml
@@ -20,6 +20,7 @@
                 <Button x:Name="bubbleButton" Content="Bubble" Click="bubbleButton_Click" />
                 <Button x:Name="mergeButton" Content="Merge" Click="mergeButton_Click" />
                 <Button x:Name="quickButton" Content="Quick" Click="quickButton_Click" />
+                <Button x:Name="heapButton" Content="Heap" Click="heapButton_Click" />
                 <Button x:Name="dotNetButton" Content=".NET" Click="dotNetButton_Click" />
             </StackPanel>
         </StackPanel>
