Added status bar to GUI to display supplementary messages for mouseovers of certain UI elements

--- a/SearchAndSort/MainWindow.xaml
+++ b/SearchAndSort/MainWindow.xaml
@@ -3,13 +3,21 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Searching and Sorting" Height="350" Width="525">
     <DockPanel>
+        <StackPanel x:Name="statusPanel" DockPanel.Dock="Bottom">
+            <StatusBar x:Name="statusBar" Height="22" Background="LightGray">
+                <StatusBarItem>
+                    <TextBlock x:Name="statusBarText" />
+                </StatusBarItem>
+            </StatusBar>
+        </StackPanel>
+        
         <StackPanel x:Name="algorithmsPanel" DockPanel.Dock="Left" Width="150" Background="#FFEAEAEA">
             <RadioButton x:Name="searchRadioButton" Content="Search Algorithms" 
                          Style="{StaticResource Heading}" Checked="searchRadioButton_Checked" />
             <StackPanel x:Name="searchAlgorithmsPanel">
                 <Button x:Name="linearButton" Content="Linear" Click="linearButton_Click" />
                 <Button x:Name="binaryButton" Content="Binary" Click="binaryButton_Click"
-                        ToolTip="Numbers must be in ascending order before search." />
+                        MouseEnter="binaryButton_MouseEnter" MouseLeave="statusBarDefault_MouseLeave" />
             </StackPanel>
                 
             <RadioButton x:Name="sortRadioButton" Content="Sorting Algorithms" 
@@ -27,10 +35,10 @@
         </StackPanel>
         
         <StackPanel x:Name="dataPanel" DockPanel.Dock="Right">
-            <Label Content="Insert numbers here:" Style="{StaticResource Heading}" />
-            <TextBox x:Name="inputBox" Margin="5" 
-                     ToolTip="Spaces, commas, semi-colons, and ampersands allowed." />
-            
+            <StackPanel x:Name="numbersInput" MouseEnter="inputNumbers_MouseEnter" MouseLeave="statusBarDefault_MouseLeave">
+                <Label Content="Insert numbers here:" Style="{StaticResource Heading}" />
+                <TextBox x:Name="inputBox" Margin="5" />
+            </StackPanel>
             <DockPanel x:Name="searchOnlyInput">
                 <Label Content="Insert desired number here:" Style="{StaticResource Heading}"
                        DockPanel.Dock="Left" />
