--- a/SearchAndSort/App.xaml
+++ b/SearchAndSort/App.xaml
@@ -8,6 +8,7 @@
         </Style>
         <Style TargetType="Button">
             <Setter Property="Margin" Value="5 3" />
+            <Setter Property="Background" Value="LightGray" />
         </Style>
         <Style x:Key="Heading" TargetType="Control">
             <Setter Property="FontWeight" Value="Bold" />
