Implemented support for user to skip binary search method's sort check; changed output Labels to TextBlocks for text wrapping and scrolling support; minor variable name improvements

--- a/SearchAndSort/MainWindow.xaml
+++ b/SearchAndSort/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="SearchAndSort.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Search &amp; Sort" Height="350" Width="525">
+        Title="Search &amp; Sort" Height="450" Width="540">
     <DockPanel>
         <StackPanel x:Name="statusPanel" DockPanel.Dock="Bottom">
             <StatusBar x:Name="statusBar" Height="22" Background="LightGray">
@@ -37,32 +37,46 @@
         <StackPanel x:Name="dataPanel" DockPanel.Dock="Right">
             <StackPanel x:Name="numbersInput" MouseEnter="inputNumbers_MouseEnter" MouseLeave="statusBarDefault_MouseLeave">
                 <Label Content="Insert numbers here:" Style="{StaticResource Heading}" />
-                <TextBox x:Name="inputBox" Margin="5" />
+                <TextBox x:Name="inputBox" Margin="5" MaxHeight="50" />
             </StackPanel>
             <DockPanel x:Name="searchOnlyInput">
+                <DockPanel DockPanel.Dock="Top">
                 <Label Content="Insert desired number here:" Style="{StaticResource Heading}"
                        DockPanel.Dock="Left" />
-                <TextBox x:Name="desiredNumBox" Margin="5" DockPanel.Dock="Right" />
+                    <TextBox x:Name="desiredNumBox" Margin="5" DockPanel.Dock="Right" />
+                </DockPanel>
+                <DockPanel DockPanel.Dock="Bottom">
+                    <CheckBox x:Name="disableSortCheckCheckBox" DockPanel.Dock="Top" Content="Binary: skip sort check (for faster performance)" FontWeight="Bold"
+                               MouseEnter="disableSortCheckCheckBox_MouseEnter" MouseLeave="statusBarDefault_MouseLeave" />
+                    <RadioButton x:Name="noSortCheckAscendingRadioButton" Content="Ascending"
+                                 Margin="30 0 10 0" Checked="noSortCheckAscendingRadioButton_Checked" 
+                                 IsEnabled="{Binding IsChecked, ElementName=disableSortCheckCheckBox, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                    <RadioButton x:Name="noSortCheckDescendingRadioButton" Content="Descending"
+                                 Checked="noSortCheckDescendingRadioButton_Checked"
+                                 IsEnabled="{Binding IsChecked, ElementName=disableSortCheckCheckBox, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                </DockPanel>
             </DockPanel>
-            <Label Content="Output:" Style="{StaticResource Heading}" />
-            <Label x:Name="outputLabel" Content="..." Style="{StaticResource Info}" >
-                <Label.ContextMenu>
-                    <ContextMenu>
-                        <MenuItem x:Name="copyAllOutputMenuItem" Header="Copy Output"
-                                  Click="copyAllOutputMenuItem_Click" />
-                    </ContextMenu>
-                </Label.ContextMenu>
-            </Label>
-
+            <Label Content="Results:" Style="{StaticResource Heading}" />
+            <ScrollViewer VerticalScrollBarVisibility="Auto" MaxHeight="100">
+                <TextBlock x:Name="outputTextBlock" Text="..." TextWrapping="Wrap" 
+                           Style="{StaticResource Info}">
+                    <TextBlock.ContextMenu>
+                        <ContextMenu>
+                            <MenuItem x:Name="copyAllOutputMenuItem" Header="Copy Output"
+                                      Click="copyAllOutputMenuItem_Click" />
+                        </ContextMenu>
+                    </TextBlock.ContextMenu>
+                </TextBlock>
+            </ScrollViewer>
             <Label Content="Statistics:" Style="{StaticResource Heading}" />
-            <Label x:Name="statisticsLabel" Content="..." Style="{StaticResource Info}">
-                <Label.ContextMenu>
+            <TextBlock x:Name="statisticsTextBlock" Text="..." Style="{StaticResource Info}">
+                <TextBlock.ContextMenu>
                     <ContextMenu>
                         <MenuItem x:Name="copyAllStatisticsMenuItem" Header="Copy Statistics"
                                   Click="copyAllStatisticsMenuItem_Click" />
                     </ContextMenu>
-                </Label.ContextMenu>
-            </Label>
+                </TextBlock.ContextMenu>
+            </TextBlock>
         </StackPanel>
     </DockPanel>
 </Window>
