--- a/SearchAndSort/App.xaml
+++ b/SearchAndSort/App.xaml
@@ -13,7 +13,7 @@
         <Style x:Key="Heading" TargetType="Control">
             <Setter Property="FontWeight" Value="Bold" />
         </Style>
-        <Style x:Key="Info" TargetType="Label">
+        <Style x:Key="Info" TargetType="TextBlock">
             <Setter Property="Background" Value="LightGray" />
             <Setter Property="Margin" Value="5 3" />
         </Style>
